--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -471,7 +471,8 @@
                 },
                 "password": {
                     "label": "Contraseña",
-                    "placeholder": "Introduzca su contraseña"
+                    "placeholder": "Introduzca su contraseña",
+                    "max-length-warning": "¡La contraseña supera los 64 caracteres! Si la contraseña es inválida, intenta ingresar solo sus primeros 64 caracteres." 
                 },
                 "stay": {
                     "label": "Manténgase conectado"
