--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -335,12 +335,17 @@
         "bs-launch": {
             "success": {
                 "titles": {
-                    "launching": "Launching...🚀"
+                    "BS_LAUNCHING": "Launching...🚀",
+                    "STEAM_LAUNCHING": "Steam is launching!"
+                },
+                "msg": {
+                    "BS_LAUNCHING": "TODO",
+                    "STEAM_LAUNCHING": "Beat Saber will automatically launch after Steam."
                 }
             },
             "errors": {
                 "titles": {
-                    "UNABLE_TO_LAUNCH": "Unable to launch",
+                    "UNKNOWN_ERROR": "Unable to launch",
                     "STEAM_NOT_RUNNING": "Steam is not running",
                     "OCULUS_NOT_RUNNING": "Oculus is not running",
                     "BS_ALREADY_RUNNING": "BeatSaber already running",
