[feature] Add translation for "BS_LAUNCHING" event + add TODO

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -339,7 +339,7 @@
                     "STEAM_LAUNCHING": "Steam startet!"
                 },
                 "msg": {
-                    "BS_LAUNCHING": "TODO",
+                    "BS_LAUNCHING": "Vergiss nicht, dich aufzuwärmen 😉",
                     "STEAM_LAUNCHING": "Beat Saber wird automatisch nach Steam gestartet."
                 }
             },
