--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -339,7 +339,7 @@
                     "STEAM_LAUNCHING": "Steam is launching!"
                 },
                 "msg": {
-                    "BS_LAUNCHING": "TODO",
+                    "BS_LAUNCHING": "Don't forget to warm up 😉",
                     "STEAM_LAUNCHING": "Beat Saber will automatically launch after Steam."
                 }
             },
