--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -338,7 +338,7 @@
                     "STEAM_LAUNCHING": "¡Steam se está iniciando!"
                 },
                 "msg": {
-                    "BS_LAUNCHING": "TODO",
+                    "BS_LAUNCHING": "No olvides calentarte 😉",
                     "STEAM_LAUNCHING": "Beat Saber se lanzará automáticamente después de Steam."
                 }
             },
