--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -338,7 +338,7 @@
                     "STEAM_LAUNCHING": "Steam se lance !"
                 },
                 "msg": {
-                    "BS_LAUNCHING": "TODO",
+                    "BS_LAUNCHING": "N'oublie pas de t'échauffer 😉",
                     "STEAM_LAUNCHING": "Beat Saber se lancera automatiquement après Steam"
                 }
             },
