undo unnecessary wording change

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -302,7 +302,7 @@
             },
             "additional-content": {
                 "deep-link": {
-                    "select-all": "Enable all",
+                    "select-all": "Select all",
                     "activation": {
                         "success": {
                             "title": "OneClick activated!",
