--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -32,7 +32,7 @@
             "launch-mods": {
                 "oculus": "Oculus Mod",
                 "oculus-description": "Si estás usando Beat Saber a través de Steam, te permite usar el compositor VR de Oculus sin pasar por SteamVR, para ganar prestaciones. Esto no es necesario para usar auriculares Oculus.",
-                "desktop": "Desktop Mod",
+                "desktop": "FPFC Mod",
                 "desktop-description": "Esto te permite usar WASD y el mouse para navegar por el menú en juego. Esto hace que las pruebas sean mucho más fáciles, ¡porque no tienes que ponerte el auricular!",
                 "debug": "Debug Mod",
                 "debug-description": "Habilita la ventana de registro de salida para IPA. Esto mostrará la consola de depuración que usan los mods.",
