--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -32,7 +32,7 @@
             "launch-mods": {
                 "oculus": "Mode Oculus",
                 "oculus-description": "Si vous utilisez Beat Saber via Steam, cela vous permet d'utiliser le compositeur VR d'Oculus sans passer par SteamVR, pour gagner en performances. Ceci n'est pas nécessaire pour utiliser les casques Oculus.",
-                "desktop": "Mode Bureau",
+                "desktop": "Mode FPFC",
                 "desktop-description": "Cela vous permet d'utiliser WASD et la souris pour naviguer dans le menu en jeu. Cela rend les tests beaucoup plus faciles, car vous n'avez pas à mettre votre casque!",
                 "debug": "Mode Debug",
                 "debug-description": "Active la fenêtre de log pour IPA. Cela affichera la console de débogage utilisée par les mods.",
