--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -97,6 +97,7 @@
                 "clone": "Clone",
                 "edit": "Edit",
                 "uninstall": "Uninstall",
+                "create-shortcut": "Create a shortcut",
                 "shared-folders": "Shared Folders"
             }
         },
@@ -451,6 +452,15 @@
                     "msg": "Sharing the 'UserData' folder can generate errors, in case of problems unlink the folder to restore the backup"
                 }
             }
+        },
+        "create-launch-shortcut": {
+            "success": {
+                "title": "Shortcut created",
+                "msg": "The shortcut has been created on the desktop."
+            },
+            "error": {
+                "msg": "An error occurred while creating the shortcut."
+            }
         }
     },
     "modals": {
@@ -611,6 +621,13 @@
                 "unlink-folder": "Unlink Folder",
                 "link-all": "Link all"
             }
+        },
+        "create-launch-shortcut": {
+            "title": "Create a shortcut",
+            "desc": "Creating a shortcut will allow you to start Beat Saber with the chosen options without going through BSManager.",
+            "launch-options": "Launch options",
+            "advanced-launch": "Advanced launch",
+            "valid-btn": "Create the shortcut"
         }
     },
     "maps": {
