--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -147,12 +147,14 @@
                     "fr-FR": "Français",
                     "es-ES": "Español",
                     "de-DE": "Deutsch",
+                    "ru-RU": "Русский",
                     "translated": {
                         "en-EN": "English, United Kingdom",
                         "en-US": "English, USA",
                         "fr-FR": "French",
                         "es-ES": "Spanish",
-                        "de-DE": "German"
+                        "de-DE": "German",
+                        "ru-RU": "Russian"
                     }
                 }
             },
