[fix] Corrected translation of `oculus-description`

--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -31,7 +31,7 @@
         "version-viewer": {
             "launch-mods": {
                 "oculus": "Режим Oculus",
-                "oculus-description": "Если вы используете Beat Saber через Steam, это позволит использовать Oculus's VR в обход SteamVR, для потенциального прироста производительности. Вам не нужны шлемы Oculus.",
+                "oculus-description": "Если вы используете Beat Saber через Steam, это позволит использовать Oculus's VR в обход SteamVR, для потенциального прироста производительности. Это необязательно для шлемов Oculus.",
                 "desktop": "Режим FPFC",
                 "desktop-description": "Режим Летающих контроллеров от первого лица(FPFC) позволит вам использовать меню с помощью WASD и мышки. Это облегчает тестирование модов, потому что вам не нужно подключать шлем!",
                 "debug": "Режим отладки",
